Fixed image scaling on mobile

--- a/css/header.css
+++ b/css/header.css
@@ -5,22 +5,24 @@ html {
     justify-content: center;
     align-items: center;
     text-align: center;
-    min-height: 100vh;
-
     font-size: 1.4em;
+    min-height: 100vh;
 }
 
-@media (max-width : 500px) {
-    html {
-        font-size: .75em;
-        
-    }
-}
 @media (max-width : 1920px) {
     html {
         font-size: 1em;
     }
 
+}
+
+@media (max-width : 500px) {
+    html {
+        font-size: .75em;
+
+        margin-top: -4em;
+        
+    }
 }
 
 body {
@@ -45,7 +47,6 @@ body {
 
 img {
     width: 100%;
-    height: auto;
     display: block;
 
     object-fit: cover;
